Added ecmaveback function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,17 @@
 
 export(durbinH)
 export(ecm)
+export(ecmave)
+export(ecmaveback)
 export(ecmback)
 export(ecmpredict)
 export(lagpad)
+export(lmave)
 importFrom(car,durbinWatsonTest)
+importFrom(stats,AIC)
+importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
+importFrom(stats,drop1)
 importFrom(stats,lm)
 importFrom(stats,predict)
 importFrom(stats,step)
