Fixed lmave function to use lists instead of assign

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(lmave)
 importFrom(car,durbinWatsonTest)
 importFrom(stats,AIC)
 importFrom(stats,as.formula)
+importFrom(stats,coef)
 importFrom(stats,complete.cases)
 importFrom(stats,drop1)
 importFrom(stats,lm)
