--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,11 @@ Title: Build Error Correction Models
 Imports:
     stats,
     car
-Version: 4.1.0
+Version: 4.2.0
 Author: Gaurav Bansal
 Maintainer: Gaurav Bansal <gaurbans@gmail.com>
 Description: Functions for easy building of error correction models (ECM) for time series regression. 
+    Source code available at https://github.com/gaurbans/ecm.
 License: GPL (>= 2)
 LazyData: TRUE
 RoxygenNote: 6.0.1
