Added cumcount function and nested CV functionality

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Build Error Correction Models
 Imports:
     stats,
     car
-Version: 4.3.0
+Version: 4.4.0
 Author: Gaurav Bansal
 Maintainer: Gaurav Bansal <gaurbans@gmail.com>
 Description: Functions for easy building of error correction models (ECM) for time series regression. 
@@ -12,3 +12,4 @@ URL: https://github.com/gaurbans/ecm
 License: GPL (>= 2)
 LazyData: TRUE
 RoxygenNote: 6.1.0
+Encoding: UTF-8
