Added ability to fit model with 'earth' in ecm and ecmpredict

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,9 @@ Imports:
     car,
     sandwich,
     lmtest,
-    urca
-Version: 5.2.0
+    urca,
+    earth
+Version: 6.0.0
 Author: Gaurav Bansal
 Maintainer: Gaurav Bansal <gaurbans@gmail.com>
 Description: Functions for easy building of error correction models (ECM) for time series regression. 
